fixed text overflow

--- a/src/app/work-experience/work-experience.component.scss
+++ b/src/app/work-experience/work-experience.component.scss
@@ -22,6 +22,14 @@ ul li h4{
 }
 
 // PC
+:host.pc .container ul li ul li {
+  width: 500px;
+  text-align: justify;
+  font-size: 1rem;
+  list-style: disc;
+  margin-top: 1px;
+}
+
 :host.pc ul li:has(ul){
   width: max-content;
   position: relative;
@@ -40,6 +48,7 @@ ul li h4{
   z-index: 2;
   background-color: var(--green);
 }
+
 :host.pc ul li:has(ul)::after {
 
   content: '';
